--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="music-list-title">播放队列</div>
             <hr class="line">
             <div class="all-list">
-                <div id="music0">洛春赋</div>
+                <div id="music0">40mP - だんだん近くなる (逐渐靠近)</div>
                 <div id="music1">Yesterday</div>
                 <div id="music2">江南烟雨色</div>
                 <div id="music3">Vision pt.II</div>
