--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
             <hr class="line">
             <div class="all-list">
                 <div id="music0">40mP - だんだん近くなる (逐渐靠近)</div>
+                <div id="music0">40mP - だんだん近くなる (逐渐靠近)</div>
+                <div id="music0">40mP - だんだん近くなる (逐渐靠近)</div>
+                <div id="music0">40mP - だんだん近くなる (逐渐靠近)</div>
+                <div id="music0">40mP - だんだん近くなる (逐渐靠近)</div>
+                <div id="music0">40mP - だんだん近くなる (逐渐靠近)</div>
+                <div id="music0">40mP - だんだん近くなる (逐渐靠近)</div>
                 <div id="music1">Yesterday</div>
                 <div id="music2">江南烟雨色</div>
                 <div id="music3">Vision pt.II</div>
