--- a/index.html
+++ b/index.html
@@ -77,16 +77,13 @@
             <div class="music-list-title">播放队列</div>
             <hr class="line">
             <div class="all-list">
-                <div id="music0">40mP - だんだん近くなる (逐渐靠近)</div>
-                <div id="music0">40mP - だんだん近くなる (逐渐靠近)</div>
-                <div id="music0">40mP - だんだん近くなる (逐渐靠近)</div>
-                <div id="music0">40mP - だんだん近くなる (逐渐靠近)</div>
-                <div id="music0">40mP - だんだん近くなる (逐渐靠近)</div>
-                <div id="music0">40mP - だんだん近くなる (逐渐靠近)</div>
-                <div id="music0">40mP - だんだん近くなる (逐渐靠近)</div>
+                <div id="music0">だんだん近くなる (逐渐靠近)</div>
                 <div id="music1">Yesterday</div>
                 <div id="music2">江南烟雨色</div>
                 <div id="music3">Vision pt.II</div>
+                <div id="music4">Vision pt.II</div>
+                <div id="music5">Vision pt.II</div>
+                <div id="music6">Vision pt.II</div>
             </div>
         </div>
     </div>
