--- a/index.html
+++ b/index.html
@@ -77,13 +77,15 @@
             <div class="music-list-title">播放队列</div>
             <hr class="line">
             <div class="all-list">
-                <div id="music0">だんだん近くなる (逐渐靠近)</div>
-                <div id="music1">她不是</div>
-                <div id="music2">江南烟雨色</div>
-                <div id="music3">Vision pt.II</div>
-                <div id="music4">Vision pt.II</div>
-                <div id="music5">Vision pt.II</div>
-                <div id="music6">Vision pt.II</div>
+                <div id="music0">40mP - だんだん近くなる (逐渐靠近)</div>
+                <div id="music1">BigYear大年 - 她不是</div>
+                <div id="music2">¿Téo？ - Ascended Vibrations</div>
+                <div id="music3">周杰伦 - 我是如此相信</div>
+                <div id="music4">赵雷 - 我记得</div>
+                <div id="music5">BGM制造商 - 随心所欲 (BGM版)</div>
+                <div id="music6">Ash - Melody (Original Mix)</div>
+                <div id="music7">Andrew Prahlow - Travelers' encore</div>
+                <div id="music8">ali habar艾力 - 回到夏天</div>
             </div>
         </div>
     </div>
